[gd_scene load_steps=6 format=3 uid="uid://doexh7ixpctf0"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="2"]
[ext_resource type="Script" path="res://scripts/WaveManager.gd" id="3"]
[ext_resource type="Script" path="res://scripts/Flag.gd" id="4"]
[ext_resource type="PackedScene" path="res://scenes/Enemy.tscn" id="5"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("2")

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("3")
enemy_scene = ExtResource("5")

[node name="Flag" type="Node2D" parent="."]
script = ExtResource("4")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="GoldLabel" type="Label" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 200.0
offset_bottom = 13.0
grow_vertical = 2
text = "Gold: 100"
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -13.0
offset_right = 90.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Wave: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartWaveButton" type="Button" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Start Wave"

[node name="TowerPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TowerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -30.0
offset_right = 180.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BallistaButton" type="Button" parent="UI/TowerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Ballista
50g"

[node name="FlamethrowerButton" type="Button" parent="UI/TowerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Flamethrower
75g"

[node name="ArcaneButton" type="Button" parent="UI/TowerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Arcane
100g"
